--- a/package.json
+++ b/package.json
@@ -3,24 +3,14 @@
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
-    "start": "node server.js",
+    "build": "webpack",
+    "start": "cross-env NODE_ENV=development node scripts/start",
     "lint": "eslint src"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/gaearon/react-hot-boilerplate.git"
   },
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "edit",
-    "webpack"
-  ],
   "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
   "license": "MIT",
   "bugs": {
@@ -52,36 +42,40 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
+    "chalk": "^1.1.3",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^12.0.0",
+    "eslint-config-airbnb": "latest",
     "eslint-import-resolver-babel-module": "^2.0.1",
     "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-flowtype-errors": "^1.5.0",
-    "eslint-plugin-import": "^2.1.0",
+    "eslint-plugin-import": "latest",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.5.0",
-    "eslint-plugin-react": "^3.6.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "flow-bin": "^0.34.0",
+    "html-webpack-plugin": "^2.28.0",
     "jest": "^18.0.0",
+    "moment": "^2.17.1",
     "node-sass": "^3.13.1",
-    "postcss-loader": "^1.2.2",
-    "sass-loader": "^4.0.0",
-    "sass-resources-loader": "^1.1.0",
+    "open-browser-webpack-plugin": "0.0.4",
+    "postcss-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.4",
+    "sass-loader": "^4.1.1",
+    "sass-resources-loader": "^1.2.0",
     "style-loader": "^0.13.1",
     "stylelint": "^7.3.1",
     "stylelint-config-standard": "^14.0.0",
     "stylelint-scss": "^1.3.4",
-    "express": "^4.13.4",
-    "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.16.1"
   },
   "dependencies": {
+    "moment": "^2.17.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
