--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "css-loader": "^0.25.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.9.1",
-    "eslint-config-airbnb": "latest",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-import-resolver-babel-module": "^2.0.1",
     "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-flowtype-errors": "^1.5.0",
