add flow checker

--- a/.flowconfig
+++ b/.flowconfig
@@ -1,3 +1,13 @@
 [ignore]
 */src/\(test\|spec\)/.*
+.*/node_modules/fbjs/.*
+[libs]
 <PROJECT_ROOT>/node_modules/.*
+[options]
+module.name_mapper.extension='scss' -> 'empty/object'
+suppress_type=$FlowIssue
+module.file_ext=.css
+module.file_ext=.scss
+module.file_ext=.js
+module.file_ext=.jsx
+module.file_ext=.json
