--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "webpack",
     "start": "cross-env NODE_ENV=development node scripts/start",
+    "flow": "node_modules/.bin/flow",
     "lint": "eslint src"
   },
   "repository": {
@@ -44,7 +45,7 @@
     "babel-runtime": "^6.11.6",
     "chalk": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.3",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.25.0",
     "enzyme": "^2.4.1",
     "eslint": "^3.9.1",
