--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "webpack",
     "start": "cross-env NODE_ENV=development node scripts/start",
     "flow": "node_modules/.bin/flow",
-    "lint": "eslint src"
+    "lint": "eslint src --ext .js --ext .jsx --fix"
   },
   "repository": {
     "type": "git",
@@ -58,7 +58,7 @@
     "eslint-plugin-react": "^6.5.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "flow-bin": "^0.34.0",
+    "flow-bin": "^0.42.0 ",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^18.0.0",
     "moment": "^2.17.1",
