--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,7 @@
     "new-cap": 0,
     "global-require": 0,
     "class-methods-use-this": 0,
-    "spaced-comment": 0,
+    "spaced-comment": 0
   },
 
   "settings": {
