--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "webpack",
     "start": "cross-env NODE_ENV=development node scripts/start",
     "flow": "node_modules/.bin/flow",
+    "test": "cross-env NODE_ENV=development jest --watch",
     "lint": "eslint src --ext .js --ext .jsx --fix"
   },
   "repository": {
@@ -65,6 +66,7 @@
     "node-sass": "^3.13.1",
     "postcss-loader": "^1.3.1",
     "react-hot-loader": "^3.0.0-beta.4",
+    "react-test-renderer": "^15.4.2",
     "sass-loader": "^4.1.1",
     "sass-resources-loader": "^1.2.0",
     "style-loader": "^0.13.1",
