--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "moment": "^2.17.1",
     "node-sass": "^3.13.1",
     "postcss-loader": "^1.3.1",
+    "react-addons-test-utils": "^15.0.0-rc.2",
     "react-hot-loader": "^3.0.0-beta.4",
     "react-test-renderer": "^15.4.2",
     "sass-loader": "^4.1.1",
