--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
+  - "4"
+  - "5"
   - "6"
-  - "6.1"
-  - "5.11"
-  - "0.6"
+script:
+  - npm run lint
+  - npm run flow
