--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "no-confusing-arrow": 0,
     "no-plusplus": 0,
     "new-cap": 0,
+		"no-tabs": 0,
     "global-require": 0,
     "class-methods-use-this": 0,
     "spaced-comment": 0
