--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-datepicker",
+  "name": "rc-calendar-datepicker",
   "version": "1.0.0",
-  "description": "React datepicker",
+  "description": "React Datepicker",
   "scripts": {
     "build": "cross-env NODE_ENV=production ./node_modules/webpack/bin/webpack.js --progress --colors",
     "start": "cross-env NODE_ENV=development node scripts/start",
