--- a/package.json
+++ b/package.json
@@ -1,84 +1,89 @@
 {
-  "name": "rc-calendar-datepicker",
-  "version": "1.0.0",
-  "description": "React Datepicker",
-  "scripts": {
-    "build": "cross-env NODE_ENV=production ./node_modules/webpack/bin/webpack.js --progress --colors",
-    "start": "cross-env NODE_ENV=development node scripts/start",
-    "flow": "./node_modules/.bin/flow",
-    "test": "cross-env NODE_ENV=development jest",
-    "lint": "eslint src --ext .js --ext .jsx --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/frontmaker/react-datepicker.git"
-  },
-  "author": "Evgenii Akishin <Djeka345@gmail.com> (http://github.com/frontmaker)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/frontmaker/react-datepicker/issues"
-  },
-  "homepage": "https://github.com/frontmaker/react-datepicker",
-  "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.0",
-    "babel-jest": "^18.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.9",
-    "babel-plugin-module-resolver": "^2.0.0",
-    "babel-plugin-syntax-flow": "^6.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-flow-strip-types": "^6.18.0",
-    "babel-plugin-transform-imports": "^1.1.0",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "babel-runtime": "^6.11.6",
-    "chalk": "^1.1.3",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.2.4",
-    "css-loader": "^0.25.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-import-resolver-babel-module": "^2.0.1",
-    "eslint-plugin-flowtype": "^2.30.4",
-    "eslint-plugin-flowtype-errors": "^3.0.1",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.5.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "flow-bin": "^0.42.0 ",
-    "html-webpack-plugin": "^2.28.0",
-    "jest": "^18.0.0",
-    "node-sass": "^3.13.1",
-    "postcss-loader": "^1.3.1",
-    "react-addons-test-utils": "^15.0.0-rc.2",
-    "react-hot-loader": "^3.0.0-beta.4",
-    "react-test-renderer": "^15.4.2",
-    "sass-loader": "^4.1.1",
-    "sass-resources-loader": "^1.2.0",
-    "style-loader": "^0.13.1",
-    "stylelint": "^7.3.1",
-    "stylelint-config-standard": "^14.0.0",
-    "stylelint-scss": "^1.3.4",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.16.1",
+	"name": "rc-calendar-datepicker",
+	"version": "1.0.0",
+	"description": "React Datepicker",
+	"scripts": {
+		"build": "cross-env NODE_ENV=production ./node_modules/webpack/bin/webpack.js --progress --colors",
+		"start": "cross-env NODE_ENV=development node scripts/start",
+		"flow": "./node_modules/.bin/flow",
+		"test": "jest --coverage",
+		"lint": "eslint src --ext .js --ext .jsx --fix"
+	},
+	"jest": {
+		"moduleNameMapper": {
+			".scss$": "./utils/SCSSStub.js"
+		}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/frontmaker/react-datepicker.git"
+	},
+	"author": "Evgenii Akishin <Djeka345@gmail.com> (http://github.com/frontmaker)",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/frontmaker/react-datepicker/issues"
+	},
+	"homepage": "https://github.com/frontmaker/react-datepicker",
+	"devDependencies": {
+		"autoprefixer": "^6.3.6",
+		"babel-cli": "^6.14.0",
+		"babel-core": "^6.18.2",
+		"babel-eslint": "^7.1.0",
+		"babel-jest": "^18.0.0",
+		"babel-loader": "^6.2.4",
+		"babel-plugin-add-module-exports": "^0.2.1",
+		"babel-plugin-lodash": "^3.2.9",
+		"babel-plugin-module-resolver": "^2.0.0",
+		"babel-plugin-syntax-flow": "^6.18.0",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-flow-strip-types": "^6.18.0",
+		"babel-plugin-transform-imports": "^1.1.0",
+		"babel-plugin-transform-react-constant-elements": "^6.9.1",
+		"babel-plugin-transform-react-inline-elements": "^6.8.0",
+		"babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
+		"babel-plugin-transform-react-remove-prop-types": "^0.2.9",
+		"babel-plugin-transform-runtime": "^6.12.0",
+		"babel-polyfill": "^6.13.0",
+		"babel-preset-es2015": "^6.6.0",
+		"babel-preset-react": "^6.5.0",
+		"babel-preset-stage-0": "^6.5.0",
+		"babel-register": "^6.14.0",
+		"babel-runtime": "^6.11.6",
+		"chalk": "^1.1.3",
+		"copy-webpack-plugin": "^4.0.1",
+		"cross-env": "^3.2.4",
+		"css-loader": "^0.25.0",
+		"enzyme": "^2.4.1",
+		"eslint": "^3.9.1",
+		"eslint-config-airbnb": "^13.0.0",
+		"eslint-import-resolver-babel-module": "^2.0.1",
+		"eslint-plugin-flowtype": "^2.30.4",
+		"eslint-plugin-flowtype-errors": "^3.0.1",
+		"eslint-plugin-import": "latest",
+		"eslint-plugin-jsx-a11y": "^2.2.2",
+		"eslint-plugin-react": "^6.5.0",
+		"extract-text-webpack-plugin": "^1.0.1",
+		"file-loader": "^0.9.0",
+		"flow-bin": "^0.42.0 ",
+		"html-webpack-plugin": "^2.28.0",
+		"jest": "^18.0.0",
+		"node-sass": "^3.13.1",
+		"postcss-loader": "^1.3.1",
+		"react-addons-test-utils": "^15.0.0-rc.2",
+		"react-hot-loader": "^3.0.0-beta.4",
+		"react-test-renderer": "^15.4.2",
+		"sass-loader": "^4.1.1",
+		"sass-resources-loader": "^1.2.0",
+		"style-loader": "^0.13.1",
+		"stylelint": "^7.3.1",
+		"stylelint-config-standard": "^14.0.0",
+		"stylelint-scss": "^1.3.4",
+		"webpack": "^1.13.0",
+		"webpack-dev-server": "^1.16.1",
 		"react-dom": "^15.3.2",
 		"react": "^15.4.2"
-  },
-  "dependencies": {
+	},
+	"dependencies": {
 		"moment": "^2.17.1"
-  }
+	}
 }
